apps/web_game/middleware-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-root-to-en
  namespace: web-game
spec:
  redirectRegex:
    regex: "^/($|\\?)"
    replacement: "/en"
    permanent: true
