apps/web_game/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-game-ingress
  namespace: web-game
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.gamehearth.com
      secretName: web-game-cert-secret
    - hosts:
        - gamehearth.com
      secretName: web-game-cert-secret
  rules:
    - host: api.gamehearth.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 4000
    - host: gamehearth.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 4001
